# web_7

./: alembic.ini  config.ini  my_select.py  pyproject.toml
alembic/versions/: 9539cda8293e_init.py
database/: connect_db.py  models.py
seeds/: disciplines.py  grades.py  groups.py  students.py  teachers.py
