[tool.poetry]
name = "web-7"
version = "0.1.0"
description = ""
authors = ["Igor-Mozharov <r5@ukr.net>"]
readme = "README.md"
packages = [{include = "web_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
